# swifttalk-desktop

./: CMakeLists.txt  README.md
include/: client.hpp  client_session.hpp  connection.hpp  message.hpp
sources/: client.cpp  client_session.cpp  connection.cpp  main.cpp
